basic home page together and fixed stretching link on signup page

--- a/react-app/src/components/ServerNavBar/ServerNavBar.css
+++ b/react-app/src/components/ServerNavBar/ServerNavBar.css
@@ -42,9 +42,11 @@
 }
 
 .home-main-content-wrapper {
-    width: 850px;
-    height: 350px;
-    z-index: 1;
+    width: 100%;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+
 }
 
 .home-page-image {
@@ -52,4 +54,20 @@
     width: 850px;
     height: 350px;
     border-radius: 10px;
+}
+
+.home-main-content-text {
+    width: 850px;
+    height: 350px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    margin: 0 200px;
+}
+
+.user-info-wrapper {
+    align-self: flex-start;
 }
